basically create news on client side, but database not compatiable
