# server/src/modules/newsrooms/NewsroomsRouteSwagger.yaml
@@ -71,3 +71,33 @@ paths:
           $ref: '#/components/responses/NotFound'
         '401':
           $ref: '#/components/responses/Unauthorized'
+  /newsrooms/createNews:
+    post:
+      summary: Create newsroom
+      description: create newsroom
+      tags:
+        - Newsrooms
+      requestBody:
+        description: Create News Body
+        required: true
+        content:
+          application/json:
+            $$ref: '#/components/schemas/CreateNews'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/News'
+                  message:
+                    type: string
+                  isSuccess:
+                    type: boolean
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
