# server/src/modules/newsrooms/NewsroomsRoutes.ts
@@ -1,5 +1,5 @@
 import express from 'express';
-import { findAllNews, findNewsByPkey } from './NewsController';
+import { createNewsRoom, findAllNews, findNewsByPkey } from './NewsController';
 
 const router = express.Router();
 
@@ -8,5 +8,7 @@ router.route('/').post(findAllNews);
 
 // Get news detail by pkey
 router.route('/:pkey').get(findNewsByPkey);
+
+router.route('/createNews').post(createNewsRoom);
 
 export { router };
